--- a/styles.css
+++ b/styles.css
@@ -157,3 +157,58 @@ footer {
     color: white;
 }
 
+
+
+
+
+
+
+
+
+
+.social-icons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    margin: 20px 0;
+}
+
+.social-button {
+    text-decoration: none;
+    font-size: 1em;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
+    transition: background-color 0.3s;
+	border-radius: 10%;
+}
+
+.social-button i {
+    font-size: 1.2em;
+}
+
+/* Colors for buttons */
+.social-button.facebook {
+    background: #3b5998;
+}
+
+.social-button.twitter {
+    background: #1da1f2;
+}
+
+.social-button.instagram {
+    background: deeppink;
+}
+
+.social-button.whatsapp {
+    background: #25d366;
+}
+
+.social-button:hover {
+    opacity: 0.8;
+	 
+}
